--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,3 +1,7 @@
 <div class="footer">
-
+    <div class="podval">
+      <a href="https://intocode.ru/"><div>О нас</div></a>
+      <div>Контакты</div>
+      <div>Соцсети</div>
+    </div>
 </div>
