--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,8 +1,7 @@
 <div class="headers">
-
-  <div class="sportsNews"> <a href="#">СПОРТ</a></div>
+  <div class="sportsNews"> <a href="/sport/2">СПОРТ</a></div>
   <div class="politsNews"><a href="#">ПОЛИТИКА</a></div>
-  <div class="logo"> <a href='#'><img src="style/logotype.svg"></a></div>
+  <div class="logo"> <a href='/'><img src="/{{logo}}"></a></div>
   <div class="incidentsNews"><a href="#">ПРОШЕСТВИЯ</a></div>
   <div class="itNews"><a href="#">IT-NEWS</a></div>
 </div>
