--- a/public/css/sport.css
+++ b/public/css/sport.css
@@ -1,3 +1,6 @@
+body {
+    font-family: 'Mukta', sans-serif;
+}
 .headers {
     display: flex;
     width: 1000px;
@@ -5,13 +8,7 @@
     margin: auto;
     font-weight: bold;
     border-bottom: 1px solid;
-    /* text-align: center;*/
-    /*position: absolute;*/
-    /*line-height: 5em;*/
-     padding: 20px;
-
-    /*box-s0hadow: black;*/
-    
+    padding: 20px;
 }
 .sportsNews {
     line-height: 5em;
@@ -61,6 +58,8 @@
 
 .container {
     display: flex;
+    width: 1000px;
+    margin:auto;
 }
 
 .newsDiv {
@@ -86,8 +85,8 @@
 .container_comm {
     display: flex;
     justify-content: space-between;
-    
-    
+
+
     margin-top: 50px;
 
 
@@ -104,7 +103,7 @@ button {
 
 .comments {
     margin-top: 20px;
-    
+
 }
 
 .nickName {
@@ -113,7 +112,7 @@ button {
     margin-top: 30px;
     font-size: 20px;
     font-weight: bold;
-    
+
 }
 
 .nickNameDiv {
@@ -128,4 +127,16 @@ button {
     font-size: 18px;
     text-align: center;
     margin-top: 5px;
+}
+
+.mainImg {
+    width: 500px;
+}
+
+.sideBarImg {
+    width: 200px;
+}
+
+.sideBarTitle {
+    font-size: 20px;
 }
